<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MainActivity</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="age">Age:</string>
    <string name="_0">0</string>
    <string name="birdate">Birthdate:</string>
    <string name="complete_sign_up">Complete Sign Up</string>
    <string name="first_names" tools:ignore="DuplicateDefinition">First Name:</string>
    <string name="last_names" tools:ignore="DuplicateDefinition">Last Name:</string>
    <string name="ages" tools:ignore="DuplicateDefinition">Age:</string>
    <string name="birthday">Birthday:</string>
    <string name="emails" tools:ignore="DuplicateDefinition">Email:</string>
    <string name="phone_numbers" tools:ignore="DuplicateDefinition">Phone Number:</string>
    <string name="birthdate">Birthdate</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="account_page">Account Page</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="next_page">NEXT PAGE</string>
</resources>