<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    tools:context=".DisplayInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="165dp"
            android:layout_height="176dp"
            android:layout_marginTop="52dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/invoker_vert" />

        <TextView
            android:id="@+id/accPageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_page"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.44" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="232dp"
            android:layout_height="278dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="@string/first_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/last_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/age"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bDay"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/birthday"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/eMail"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="@string/phone_number"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>